force-app/main/default/objects/pse__Expense_Report__c/pse__Expense_Report__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__ExpenseReportHelp</customHelpPage>
    <description>Like a paper expense report, this object groups together a number of different expenses and allows you to submit, approve, and ultimately charge them to a project or assignment. Expense reports are associated with a given resource and project, and may also be associated with an assignment or project milestone.</description>
    <label>Expense Report</label>
    <nameField>
        <label>Expense Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>