force-app/main/default/objects/pse__Expense_Report__c/fields/Expense_Report_Users_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Expense_Report_Users_Manager_Email__c</fullName>
    <description>Displays the resource&apos;s user record manager&apos;s email address.  This field is used to generate email notifications during the Expense Report Approval Process.</description>
    <label>Expense Report Users Manager Email</label>
    <type>Email</type>
</CustomField>