force-app/main/default/objects/pse__Expense_Report__c/fields/Finance_Approved__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox should be checked when the Expense Report has been approved by a member of the Finance Queue.</description>
    <inlineHelpText>This checkbox should be checked when the Expense Report has been approved by a member of the Finance Queue.</inlineHelpText>
    <label>Finance Approved</label>
    <type>Checkbox</type>
</CustomField>