force-app/main/default/objects/pse__Expense_Report__c/fields/Invoice_Error_Sent_To_Finance__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Error_Sent_To_Finance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is set to true the first time an invoice for this expense report could not be generated. This is done so that the first time, an email is sent to Finance with the error, but Finance is not notified of subsequent failures when generating this invoice.</description>
    <label>Invoice Error Sent To Finance</label>
    <type>Checkbox</type>
</CustomField>