force-app/main/default/objects/pse__Expense_Report__c/fields/Project_Manager_Approved__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox should be checked when the Expense Report has been approved by the Project Manager (if the Expense Report is billable).</description>
    <inlineHelpText>This checkbox should be checked when the Expense Report has been approved by the Project Manager (if the Expense Report is billable).</inlineHelpText>
    <label>Project Manager Approved</label>
    <type>Checkbox</type>
</CustomField>