force-app/main/default/objects/pse__Expense_Report__c/fields/pse__Expense_Report_Referance__c.field-meta.xml
<CustomField>
    <fullName>pse__Expense_Report_Referance__c</fullName>
    <externalId>true</externalId>
    <label>Expense Report Referance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>