force-app/main/default/objects/pse__Expense_Report__c/fields/Synced_to_Netsuite__c.field-meta.xml
<CustomField>
    <fullName>Synced_to_Netsuite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synced to Netsuite</label>
    <type>Checkbox</type>
</CustomField>