force-app/main/default/objects/pse__Expense_Report__c/fields/Synced_to_Netsuite_Date__c.field-meta.xml
<CustomField>
    <fullName>Synced_to_Netsuite_Date__c</fullName>
    <label>Synced to Netsuite Date</label>
    <type>Date</type>
</CustomField>