force-app/main/default/objects/pse__Expense_Report__c/fields/User_Manager_Approved__c.field-meta.xml
<CustomField>
    <fullName>User_Manager_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox should be checked when the Expense Report has been approved by the User&apos;s Manager.</description>
    <inlineHelpText>This checkbox should be checked when the Expense Report has been approved by the User&apos;s Manager.</inlineHelpText>
    <label>User Manager Approved</label>
    <type>Checkbox</type>
</CustomField>