force-app/main/default/objects/pse__Expense_Report__c/validationRules/pse__Project_Requires_Exp_Report_Assignment.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Project_Requires_Exp_Report_Assignment</fullName>
    <active>false</active>
    <description>Expense Reports for this Project require an Assignment.</description>
    <errorConditionFormula>AND(NOT(pse__Project__r.pse__Allow_Expenses_Without_Assignment__c),OR(ISNULL(pse__Assignment__c),(pse__Assignment__c = &apos;&apos;)))</errorConditionFormula>
    <errorDisplayField>pse__Assignment__c</errorDisplayField>
    <errorMessage>Expense Reports for this Project require an Assignment.</errorMessage>
</ValidationRule>